--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
     <main>Main Content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="visit our Facebook page (opens in a new tab)"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li><a href="" target="_blank" rel="noopener"></a></li>
+        <li><a href="" target="_blank" rel="noopener"></a></li>
+        <li><a href="" target="_blank" rel="noopener"></a></li>
+      </ul>
+    </footer>
+
+    <!--Font awesome kit-->
+    <script src="https://kit.fontawesome.com/9ddbc03291.js" crossorigin="anonymous"></script>
   </body>
 </html>
