--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul id="menu">
           <li>
@@ -59,9 +59,33 @@
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </li>
-        <li><a href="" target="_blank" rel="noopener"></a></li>
-        <li><a href="" target="_blank" rel="noopener"></a></li>
-        <li><a href="" target="_blank" rel="noopener"></a></li>
+        <li>
+          <a
+            href="https://x.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="visit our Twitter page (opens in a new tab)"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="visit our YouTube page (opens in a new tab)"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="visit our Instagram page (opens in a new tab)"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
       </ul>
     </footer>
 
