--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!--Footer-->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://www.facebook.com/"
