--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </section>
       <section id="reasons">
-        <h2></h2>
+        <h2>WHY LOVE RUNNING WITH US?</h2>
         <div id="benefits">
           <div id="benefits-physical">
             <div>
