--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,58 @@
     </header>
 
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+      <section id="signup">
+        <form id="signup-form" method="post" action="https://formdump.codeinstitute.net">
+          <h2><i class="fa-solid fa-heart-pulse"></i>Let's get you signed up!</h2>
+          <label for="first-name">First Name</label>
+          <input class="text-input" id="first-name" type="text" name="first_name" required />
+          <br />
+          <label for="last-name">Last Name</label>
+          <input class="text-input" id="last-name" type="text" name="last_name" required />
+          <br />
+          <label for="email-address">Email Address</label>
+          <input class="text-input" id="email-address" type="text" name="email_address" required />
+          <br />
+          <div class="radio-buttons">
+            <div>
+              <label for="road">Road</label>
+              <input
+                type="radio"
+                name="running_preference"
+                id="road"
+                value="road"
+                required
+                checked
+              />
+            </div>
+            <div>
+              <label for="trail">Trail</label>
+              <input
+                type="radio"
+                name="running_preference"
+                id="trail"
+                value="trail"
+                required
+                checked
+              />
+            </div>
+            <div>
+              <label for="both">Both</label>
+              <input
+                type="radio"
+                name="running_preference"
+                id="both"
+                value="both"
+                required
+                checked
+              />
+            </div>
+          </div>
+          <button type="submit" class="join-button">Let's Run!</button>
+        </form>
+      </section>
+    </main>
 
     <!--Footer-->
     <footer>
